--- a/style.css
+++ b/style.css
@@ -1,1 +1,50 @@
-dfhsth
+* {background-color: black}
+.header {
+    font-family: Verdana;
+    font-size: 50px;
+    font-weight: normal;
+    color: white;
+    text-align: center;
+    margin-left: 25%;
+    margin-right: 15%;
+}
+.dwnld {
+    font-family: Verdana;
+    color: aquamarine;
+    font-size: 16px;
+    text-align: center;
+    margin-left: 25%;
+    margin-right: 25%;
+    text-decoration: underline;
+}
+.phone {
+    align-self: center;
+    margin-left: 41%;
+    margin-right: 40%;
+}
+
+.title {
+    font-family: Verdana;
+    font-size: 42px;
+    font-weight: 300;
+    color: white;
+    text-align: center;
+}
+
+.price {
+    font-family: Verdana;
+    font-size: 21px;
+    font-weight: normal;
+    color: gray;
+    text-align: center;
+}
+.lndscp {
+    align-self: center;
+    margin-left: 30%;
+    margin-right: 30%;
+}
+.icon {
+    align-self: center;
+    margin-left: 48%;
+    margin-right: 48%;
+}
